traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:53: error: not found: value posFinal
 while(!posFinal()) {
        ^TraversalZigZag:55: error: not found: value cpt
    ecritMessage(cpt);
                 ^TraversalZigZag:65: error: not found: value cpt
    cpt += 1
    ^TraversalZigZag:68: error: not found: value cpt
  ecritMessage(cpt) 
               ^